--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,107 @@
+body {
+    text-align: center;
+    background-color: silver;
+    font-family: "montserrat";
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 25%;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+}
+
+a:link, a:visited {
+    color: black;
+    text-decoration: none;  
+}
+
+.mission {
+    background-image: url("images/city.jpeg");
+    background-position: center bottom;
+    padding: 100px 0;
+    margin: 40px 0;
+}
+
+.mission h2 {
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    background-color: rgba(192, 192, 192, 0.9);
+}
+
+.who {
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    padding: 5px;
+    background-color: rgba(192, 192, 192, 0.9);
+}
+
+.product-title {
+    border-top: 1px solid white;
+    padding-top: 20px;
+}
+
+.products {
+    /* background-image: url("images/city.jpeg"); */
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 1% 15%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    border-top: 1px solid white;
+    /* border-bottom: 1px solid white; */
+}
+
 .product {
+    background: silver;
+    margin: 10px;
+    padding: 30px 30px 0px 30px;
+    width: 250px;
+}
+
+.img-cont {
     width: 250px;
     height: 250px;
+    margin: 0 auto;
 }
 
 img {
     width:100%;
     height:100%;
     object-fit: cover;
-    /* object-position: 20% 10%; */
+}
+
+.team h2 {
+    margin-top: 50px;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    background-color: rgba(192, 192, 192, 0.9);
+    color: black;
+}
+
+.team {
+    border-top: 1px solid white;
+    background-image: url("images/city.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+}
+
+.team-box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-bottom: 200px;
+}
+
+.person img {
+    max-width: 300px;
+}
+
+.homer {
+ object-fit: none;
+ object-position: 40% 50%;
 }
